task 1 pre-styling

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,22 @@
 
 /* General Styles  */
 
+.loader {
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid #C271FF;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 2s linear infinite;
+  margin: auto;
+  display: none; /* initially hide loader */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 .body {
   font-family: var(--font-family-1);
 }
