task 1 with pic and title, need more css

--- a/styles.css
+++ b/styles.css
@@ -243,6 +243,16 @@
   font-size: 22px;
 }
 
+.quote-item {
+  display: flex;
+  align-items: center;
+}
+
+.quote-image {
+  float: left;
+  margin-right: 20px;
+}
+
 .carousel-control-prev img,
 .carousel-control-next img {
   width: 30px;
