--- a/styles.css
+++ b/styles.css
@@ -266,14 +266,14 @@
   padding-left: var(--quotes-arrows-pad);
 }
 
-#carousel {
+/* #carousel {
   margin: 20px;
 }
 
 .carousel-card {
   padding: 20px;
   text-align: center;
-}
+} */
 
 
 @media screen and (max-width: 991px) {
@@ -346,7 +346,7 @@
 }
 
 .section .card-img-overlay {
-  /* top: 25px; */
+  top: 25px;
   top: 5%;
 }
 .section .card-title {
@@ -407,7 +407,7 @@
     width: 30%;
   }
   .section .card-img-overlay {
-    /* top: 25px; */
+    top: 25px;
     top: 5%;
   }
 }
